Fix lingering old ServiceJourneys when producing DSJ
error was:
      ERROR: The ServiceJourney does not refer to DayTypes nor DatedServiceJourneys (line 737)